Fix header logo and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1764,8 +1764,8 @@ address {
     background: url('../imgs/prosilver-logo.png') no-repeat;
 
     display: inline-block;
-    width: 147px;
-    height: 51px;
+    width: 144px;
+    height: 50px;
 }
 /*--------------------------------------------------------------------------*\
     $COMPONENTS
@@ -1778,7 +1778,7 @@ address {
     text-align: right;
 }
 .navbar-nav-link {
-    line-height: 3.5;
+    line-height: 3.15;
 
     color: #73C8ED;
 
