--- a/assets/less/theme/_component-navbar.less
+++ b/assets/less/theme/_component-navbar.less
@@ -8,7 +8,7 @@
 .navbar-nav, .navbar-nav-mobile { text-align: right; }
 .navbar-nav-link {
     display: inline-block;
-    line-height: 3.5;
+    line-height: 3.15;
     .rem-size(padding-left, 16);
     .rem-size(padding-right, 16);
     color: mix(white, @secondary, 45%);
