--- a/assets/less/theme/_element-logo.less
+++ b/assets/less/theme/_element-logo.less
@@ -7,6 +7,6 @@
 .logo {
     display: inline-block;
     background: url('../imgs/prosilver-logo.png') no-repeat;
-    width: 147px;
-    height: 51px;
+    width: 144px;
+    height: 50px;
 }
